<resources>
    <string name="app_name">Story App</string>
    <string name="password_length">Password must be at least 8 characters long!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just join Dicoding!</string>
    <string name="title_welcome_page">Welcome to Bangkit Story!</string>
    <string name="title_register_page">Complete your data below</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_register">Register</string>
    <string name="title_login_page">Welcome to Bangkit Story</string>
    <string name="title_login">Login Form</string>
    <string name="email">Email</string>
    <string name="email_validation">Your email address is not valid!</string>
    <string name="password">Password</string>
    <string name="required_field">This field cannot be empty!</string>
    <string name="name">Name</string>
    <string name="username">Hello, %1$s</string>
    <string name="logout">Logout</string>
    <string name="input_image">Please upload an image file first!</string>
    <string name="add_story">Add Story</string>
    <string name="story_detail">Story Detail</string>
    <string name="title_add_story">Add Story</string>
    <string name="take_picture">Camera</string>
    <string name="open_file">Gallery</string>
    <string name="desc">Story Caption</string>
    <string name="upload_picture">Upload Story</string>
    <string name="story">Story</string>
    <string name="retry">Retry</string>
    <string name="language">Change Language</string>
    <string name="login_sucess">You have successfully logged in. Excited to learn, aren\'t you?</string>
    <string name="next">Next</string>
    <string name="author" translatable="false">Arindra Rifky Saputra</string>
</resources>