<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addStory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="24dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_margin="24dp"
            app:cardCornerRadius="24dp">

            <ImageView
                android:id="@+id/iv_add_story"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/story"
                android:transitionName="story"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:src="@drawable/ic_insert_photo"/>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_picture"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:text="@string/take_picture"
            android:textColor="@color/black"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="@id/cardImg"
            app:layout_constraintStart_toStartOf="@id/cardImg"
            app:layout_constraintTop_toBottomOf="@id/cardImg" />

        <Button
            android:id="@+id/btn_open_file"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/open_file"
            android:textColor="@color/black"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/btn_take_picture"
            app:layout_constraintStart_toStartOf="@id/btn_take_picture"
            app:layout_constraintTop_toBottomOf="@id/btn_take_picture" />

        <TextView
            android:id="@+id/tv_desc_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_open_file" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_desc_story"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_story">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_desc_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/upload_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_desc_story" />

        <ProgressBar
            android:elevation="2dp"
            android:id="@+id/pb_add"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/red"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            tools:ignore="MissingConstraints"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btn_upload" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>